# marburg_biobank

./: .gitignore  README.md  __init__.py  create.py  pyproject.toml  setup.cfg  setup.py
marburg_biobank/: __init__.py  __version__.py  create.py
marburg_biobank.egg-info/: PKG-INFO
src/marburg_biobank/: __init__.py
src/marburg_biobank.egg-info/: PKG-INFO  SOURCES.txt
