[project]
name = "marburg_biobank"
version = "0.157"
description = "Interface code to interact with data from the mbf ovca biobank."
requires-python = ">=3.12"
author = "Florian Finkernagel"
author-email = "finkernagel@imt.uni-marburg.de"

dependencies = [ 
	"pandas>0.24,<3",
	"fastparquet",
	"requests",
	"numpy",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
