[project]
name = "marburg_biobank"
version = "0.157"
description = "Interface code to interact with data from the mbf ovca biobank."
requires-python = ">=3.12"
authors = [
  { name = "Florian Finkernagel", email ="finkernagel@imt.uni-marburg.de"}
]

dependencies = [ 
	"pandas>0.24,<3",
	"fastparquet",
	"requests",
	"numpy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
