[metadata]

name = marburg_biobank
version = 0.141
author = Florian Finkernagel
author_email = finkernagel@imt.uni-marburg.de
license = MIT
description = Interface code to interact with data from the Ovara.net biobank.
url = http://www.ovara.net
project_urls =
    Source = https://github.com/imtmarburg/marburg_biobank
long_description = file; README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = True
packages = find:
install_requires =
	pandas>0.24
	pyarrow>=0.15.1
	numpy
include_package_data = True
package_dir =
    =src
#
[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[options.packages.find]
where = src
exclude =
    tests




